--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,41 @@
 
 body {
     background-color: gray;
+    transition: background-color 300ms ease-in-out;
+}
+
+.container {
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.hidden {
+    display: none;
+}
+
+.working {
+    color: white;
+    background-color: black;
+}
+
+.pomodoro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(7, 146, 146);
+    width: 300px;
+    height: 300px;
+    padding: 20px;
+
+}
+.timer {
+    font-size: 3rem;
+}
+
+.controls {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
 }
