--- a/src/App.css
+++ b/src/App.css
@@ -7,23 +7,29 @@
 
 body {
     background-color: gray;
-    transition: background-color 300ms ease-in-out;
+    transition: 300ms ease-in-out;
 }
 
 .container {
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100vw;
+    height: 100vh;
 }
 .hidden {
     display: none;
 }
 
 .working {
-    color: white;
     background-color: black;
+    transition: 300ms ease-in-out;
+}
+
+.rest-desc {
+    transition: 300ms ease-in-out;
+    background-color: rgb(121, 121, 121);
 }
 
 .pomodoro {
@@ -31,17 +37,70 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: rgb(7, 146, 146);
-    width: 300px;
-    height: 300px;
-    padding: 20px;
-
+    width: 600px;
+    height: 600px;
+    justify-content: center;
+    border-radius: 20px;
+    box-shadow: 2px 3px 3px 2px #0000005e;
+    & h2 {
+        font-size: 2.5rem;
+    }
 }
 .timer {
-    font-size: 3rem;
+    margin: 10px 0px;
+    font-size: 8rem;
+    background-color: rgba(8, 40, 145, 0.548);
+    padding: 10px 20px;
+    color: white;
+    border-radius: 10px 20px;
 }
 
 .controls {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
     gap: 20px;
+    font-size: 1rem;
+    margin: 20px 0px;
+
+    & button {
+        padding: 10px 20px;
+        font-size: 1.2rem;
+        border-radius: 10px;
+        border: 1px solid rgba(0, 0, 0, 0.363);
+
+        &:hover {
+            transition: 300ms ease-in-out;
+            background-color: rgba(8, 40, 145, 0.548);
+            color: white;
+            cursor: pointer;
+            border: 1px solid rgba(255, 255, 255, 0.568);
+        }
+        &:active {
+            background-color: rgba(255, 255, 255, 0.548);
+        }
+    }
+
+    & div {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+    }
+}
+
+.details {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 1.5rem;
+    align-items: center;
+    gap: 10px;
+    & span {
+        background-color: rgba(8, 40, 145, 0.548);
+        padding: 4px;
+        color: white;
+        border-radius: 10px;
+    }
 }
